--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,315 @@
-body, html {
-  height: 100%;
-  }
-  .bg {
-  margin: auto;
+@font-face {
+  font-family: "Work Sans";
+  src: url("https://fonts.googleapis.com/css?family=Work+Sans&display=swap");
+}
+
+* {
+  font-family: "Work Sans";
+}
+
+.navbar-grid {
+  display: block;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  
+}
+
+#navbar-container{
+  /* margin-top: -50px; */
+  text-align: -webkit-right;
+  line-height: 3.5em;
+}
+nav{
+  width: 55vw;
+  position: relative;
+  margin-right: 10px;
+  /* margin-top: 25px; */
+  font-family: 'work sans';
+}
+.navbar-grid Link {
+  font-family: 'Work Sans';
+  /* font-size: minmax(1.5rem,1.5rem); */
+  font-size: 1.5rem;
+  min-width: 180px;
+  /* max-width: auto; */
+  /* background-color: #ffcb16; */
+  color: red;
+  text-decoration: none ;
+  text-align: right;
+  padding: .4em;
+  display: inline;
+  
+}
+
+.navbar-grid a {
+  color: white; 
+  font-family: 'Work Sans';
+}
+.navbar-grid a:hover {
+  text-decoration: underline;
+  transition: ease-in-out .2s;
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.20);
+}
+
+.navbar-grid Link:hover{
+  text-decoration: underline;
+  transition: ease-in-out .2s;
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.20);
+}
+
+.bubble {
+  margin: 0px;
+  display: grid;
+  height: min-content;
+  width: 50vw;
+  text-align: -webkit-right;
+  margin-top: 8rem;
+  margin-left: 3rem;
+  padding-right: 50px;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 1em;
+}
+
+.bubble h1 {
+  margin: 0px;
+  display: block;
+  text-align: center;
+  padding: .3rem;
+  font-size: 3rem;
+  font-weight: lighter;
+}
+.bubble p {
+  margin: 0px;
+  font-size: 1.5rem;
+  padding: 1.2rem;
+  text-align: justify;
+  
+}
+
+.bubble button {
+  background-color: rgb(0, 119, 255);
+  color: white;
+  text-align: center;
+  border: 0px;
+  border-radius: 3px;
+  font-size: 1.5em;
+  padding: 10px 55px;
+  font-weight: bolder;
+  margin-top: 5px;
+  cursor: pointer;
+  outline: none;
+}
+.bubble button:hover {
+  background-color: #0050e6;
+  transition: ease-in-out .1s;
+}
+.bubble button:active {
+  background-color: #002fff;
+  box-shadow: 3px 3px rgba(0, 0, 0, 0.589);
+  transform: translateY(1px) translateX(1px);
+}
+
+.bubble article {
+  background-color: rgba(0, 255, 157, 0.7);
+  margin: 0px;
+  width: 35vw;
+  display: block;
+  text-align: -webkit-center;
+  border-radius: 5px 5px 50px 5px;
+  padding: 1em .7em;
+  min-width: 300px;
+  margin-left: 10px;
+}
+
+body {
+  margin: 0px;
   padding: 0px;
-  background-image: url("../src/bg-images/2.jpg");
-  height: 100vh;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-image: url('./bg-woman.jpg');
   background-size: cover;
+}
+
+.createExercise {
+  width: 40vw;
+  background-color: rgba(255, 255, 255, 0.50);
+  display: block;
+  float: left;
+  padding: 2em 2em 0em 2em;
+  border-radius: 10px;
+  margin-left: 6rem;
+  text-align: left;
+}
+
+.createExBtn {
+  text-align: center;
+}
+.createExBtn input {
+  text-align: center;
+  width: 90%;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.exerciseList {
+  width: auto;
+  padding: 40px;
+  color: white;
+  text-align: -webkit-center;
+  margin-top: -10.5rem;
+}
+.exerciseList tr {
+  width: auto;
+  background-color: rgba(255, 255, 255, 0.7);
+  color: black;
+  text-align: -webkit-center;
+  /* margin-left: 3.5rem; */
+}
+.exerciseList h3 {
+  width: auto;
+  background-color: rgba(255, 255, 255, 0.7);
+  color: black;
+  text-align: -webkit-center;
+  /* margin-left: 3.5rem; */
+}
+
+.createUser {
+  width: 90vw;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 1em 2.5em;
+  margin: auto;
+  margin-top: -100px;
+  text-align: left;
+}
+
+@media only screen and (max-width: 750px) {
+  #navbar-container{
+    
   }
+  nav{
+    width: 95vw;
+    display: block;
+  }
+  .bubble{
+    display: block ;
+    width: 1fr;
+    text-align: -webkit-center;
+    padding-right: 0px;
+    margin-top: .5em;
+    margin: 9px;
+  }
+  
+  .bubble article {
+    margin: 0px;
+    margin-top: 1em;
+    display: inline-block;
+    width: 96vw;
+    
+    /* height: 100px; */
+  }
+  .createExercise {
+    display: block;
+    margin: 0px;
+    width: 96vw;
+    min-width:1fr;}
+}
+
+@media only screen and (850 <min-width < 1400px) {
+  .bubble{
+    padding-right: 0px; 
+  }
+  .bubble article {
+    display: block;
+    width: 20vw;
+    text-align: -webkit-left;
+    border-radius: 5px 5px 50px 5px;
+    padding: 1.2em 0em;
+    text-align: center;
+    margin-top: 0em;
+    margin-left: 8rem;
+  }
+  .createExercise {
+    width: 35vw;
+    background-color: rgba(255, 255, 255, 0.71);
+    display: block;
+    float: left;
+    padding: 2em 2em 0em 2em;
+    border-radius: 10px;
+    margin-left: 25rem;
+    text-align: left;
+  }
+  
+  .createExBtn {
+    text-align: center;
+  }
+  .createExBtn input {
+    text-align: center;
+    width: 90%;
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  #navbar-container{
+    text-align: -webkit-left;
+    
+  }
+  nav{
+    width: 1fr;
+    display: block;
+    margin-left: 50px;
+  }
+  .navbar-grid {
+    display: grid;
+    grid-template-columns: 1fr
+  }
+  .navbar-grid Link {
+    text-align: left;
+    padding-left: 8px;
+  }
+
+.bubble{
+  display: block;
+  width: 100%;
+  padding: 13px;
+  /*margin-top: .5em;
+  margin-right: 0px; */
+  text-align: -webkit-center;  
+  margin-left:28px;
+  
+}
+
+  .bubble article {
+    display: inline-block;
+    width: 96vw;
+    text-align: -webkit-center;
+    border-radius: 5px 5px 50px 5px;
+    padding: 1.2em 0em;
+    text-align: center;
+    margin-left: 0px;
+  }
+  .exerciseList{
+    width: max-content;
+    display: block;
+    padding: 5px;
+    color: white;
+    text-align: -webkit-center;
+    background-color: red;
+    margin-left: 10px;
+  }  
+  .exerciseList h3{
+    width: 100%;
+    display: block;
+    padding: 20px;
+    color: white;
+    text-align: -webkit-center;
+
+    /* margin-left: 3.5rem; */
+  }  
+  .exerciseList tr {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    width: 84vw;
+    margin: 0px;
+    padding: 0px;
+    font-size: .8em;
+  }
+}
